--- a/templates/host_tournament.html
+++ b/templates/host_tournament.html
@@ -22,8 +22,16 @@
 
    <form method="post" class="space-y-6">
      {% csrf_token %}
+    {% if form.non_field_errors %}
+      <div class="mb-2 text-red-400">
+        {% for err in form.non_field_errors %}
+          <div>{{ err }}</div>
+        {% endfor %}
+      </div>
+    {% endif %}
      {{ form.name.label_tag }}
   {{ form.name|add_class:"w-full p-3 pl-3 rounded-xl bg-white/20 text-white focus:outline-none focus:ring-2 focus:ring-orange-500 shadow focus:bg-white/30 transition placeholder-gray-300" }}
+  {% if form.name.errors %}<div class="text-red-400 text-sm mt-1">{{ form.name.errors.0 }}</div>{% endif %}
      {{ form.description.label_tag }}
   {{ form.description|add_class:"w-full p-3 pl-3 rounded-xl bg-white/20 text-white focus:outline-none focus:ring-2 focus:ring-orange-500 shadow focus:bg-white/30 transition placeholder-gray-300" }}
      {{ form.category.label_tag }}
@@ -33,6 +41,7 @@
      </div>
      {{ form.num_participants.label_tag }}
   {{ form.num_participants|add_class:"w-full p-3 pl-3 rounded-xl bg-white/20 text-white focus:outline-none focus:ring-2 focus:ring-orange-500 shadow focus:bg-white/30 transition placeholder-gray-300" }}
+  {% if form.num_participants.errors %}<div class="text-red-400 text-sm mt-1">{{ form.num_participants.errors.0 }}</div>{% endif %}
      {{ form.match_type.label_tag }}
      <div class="relative">
        {{ form.match_type|add_class:"w-full p-3 pl-3 rounded-xl bg-white/20 text-white focus:outline-none focus:ring-2 focus:ring-orange-500 shadow focus:bg-white/30 transition placeholder-gray-300 appearance-none pr-10" }}
